# PlanningBenchmarkSuite

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  TASK.md  plan.md  plan_review.md  status.md  test_report_tasks_1_2_3.md  vcpkg.json  viz_data.json  viz_data_maze.json
.cursor/agents/: analyst.md  architect.md  architecture-reviewer.md  code-reviewer.md  developer.md  orchestrator.md  plan-reviewer.md  planner.md  tz-reviewer.md
.github/workflows/: ci.yml
apps/benchmark/: main.cpp
docker/: Dockerfile
docs/: REPLICATION.md  architecture.md  architecture_diagram.md  architecture_review.md  autonomous_web_plan.md  autonomous_web_plan_review.md  technical_specification.md  tz_review.md  web_visualization_impl_review.md  web_visualization_tz.md  web_visualization_tz_review.md
examples/: export_visualization_data.py  index.json  visualize_convergence.py
examples/viz/: benchmark_suite.json  larger_grid.json  simple_grid.json
experiments/configs/: benchmark_suite.json  benchmark_suite_results.csv  benchmark_suite_results.json  maze.json  maze_results.csv  maze_results.json  simple_grid.json  simple_grid_results.csv  simple_grid_results.json
include/benchmark/: benchmark_engine.hpp  statistics.hpp
include/core/: iplanner.hpp  path.hpp  state.hpp
include/environment/: continuous_environment.hpp  grid_environment.hpp  ienvironment.hpp  map_generator.hpp  se2_environment.hpp
include/geometry/: collision_checker.hpp  continuous_collision_checker.hpp  grid_collision_checker.hpp  (+3 more)
tasks/: task_1_1.md  task_1_2.md  task_2_1.md  task_2_2.md  task_2_3.md  task_2_4.md  task_3_1.md  task_3_2.md  task_4_1.md  task_4_2.md  task_4_3.md  task_5_1.md  task_5_2.md  task_5_3.md  task_6_1.md  task_7_1.md  task_7_2.md  task_8_1.md
tests/: CMakeLists.txt  test_benchmark.cpp  test_continuous.cpp  test_core.cpp  test_grid_collision.cpp  test_map_generator.cpp  test_planners.cpp  test_sampling.cpp  test_structure.cpp
web/: index.html  sample_viz_data.json
(+45 files in other folders)
